--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body{
-  background-color: #000051;
+  background-image: url('picture/left.jpg');
+  background-repeat: no-repeat; background-size: cover; background-position: center center;
 }
 .info-color{
   background-color: #000051 !important;
@@ -10,6 +11,12 @@ body{
   text-align: center;
   margin-left: auto;
   margin-right: auto;
+}
+.jumbotron-custom {
+    background-color: #fff;
+}
+.dark-grey-text{
+  background-color: white !important;
 }
 .btn-secondary{
   background-color: #000051 !important;
@@ -53,6 +60,9 @@ body{
   text-align: center;
   color:white;
 }
+h2{
+  color: #000051 !important;
+}
 .navbar-brand:hover,
 .navbar-brand:focus,
 .navbar-brand:active
@@ -61,7 +71,7 @@ body{
 }
 @media(max-width: 768px) {
   h2 {
-    font-size: 1.2rem !important;
+    font-size: 1.8rem !important;
   }
   .btn-custom{
     background-color: #420975 !important;
