--- a/css/mdb.css
+++ b/css/mdb.css
@@ -1728,7 +1728,7 @@ a:disabled:hover {
 a:not([href]):not([tabindex]),
 a:not([href]):not([tabindex]):focus,
 a:not([href]):not([tabindex]):hover {
-    color: inherit;
+    color: white;
     text-decoration: none
 }
 
