--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@ body{
 .info-color{
   background-color: #000051 !important;
 }
+.a
+{
+  color:white!important;
+}
 .jumbotron
 {
   width: 70%;
@@ -46,6 +50,7 @@ body{
 .btn-custom:active {
     outline: 0;
     background-color: #000051 !important;
+    color: White;
     -webkit-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
     box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15)
 }
@@ -62,6 +67,13 @@ body{
 }
 h2{
   color: #000051 !important;
+    text-shadow: 1px 1px white;
+}
+#warningInfo
+{
+  color:red;
+  font-size: 18px !important;
+
 }
 .navbar-brand:hover,
 .navbar-brand:focus,
