--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -360,6 +360,8 @@ h1, h2, h3, h4, h5, h6,
   margin-bottom: 0.5rem;
   font-weight: 500;
   line-height: 1.2;
+  color: #000051 !important;
+  text-shadow:1px 2px white;
 }
 
 h1, .h1 {
