--- a/css/mdb.css
+++ b/css/mdb.css
@@ -1522,7 +1522,7 @@
 .primary-color,
 ul.stepper li.active a .circle,
 ul.stepper li.completed a .circle {
-    background-color: #4285f4 !important
+    background-color: #000051 !important
 }
 
 .primary-color-dark {
@@ -1842,9 +1842,7 @@ a:not([href]):not([tabindex]):hover {
 
 .jumbotron {
     background-color: #fff;
-    border-radius: .125rem;
-    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)
+    width: 90%!important;
 }
 
 .bg-primary {
