--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,17 @@ body{
   background-image: url('picture/left.jpg');
   background-repeat: no-repeat; background-size: cover; background-position: center center;
 }
+.view-custom{
+  background-image: url('picture/left.jpg');
+  background-repeat: no-repeat; background-size: cover; background-position: center center;
+  height:75vh;
+}
+.view-custom-intro{
+  background-image: url('https://images.pexels.com/photos/733852/pexels-photo-733852.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
+  background-repeat: no-repeat; background-size: cover; background-position: center center;
+  height:75vh;
+  width: 100%;
+}
 .info-color{
   background-color: #000051 !important;
 }
@@ -9,9 +20,13 @@ body{
 {
   color:white!important;
 }
+.container-custom{
+  background-color: white;
+  width: 88%;
+}
 .jumbotron
 {
-  width: 70%;
+  width: 100% !important;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
@@ -26,33 +41,36 @@ body{
   background-color: #000051 !important;
 }
 .btn-custom {
-  background-color: #000051 !important;
-  color: white;
-  width: 50%;
-  margin: .375rem;
-  text-transform: uppercase;
-  word-wrap: break-word;
-  white-space: normal;
-  cursor: pointer;
-  border: 0;
-  border-radius: .125rem;
-  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
-  padding: .84rem 2.14rem;
-  font-size: .81rem
+	border:3px solid #000051;
+	color:#00005;
+	width: 50%;
+	margin: .375rem;
+	background-color:white;
+	text-transform: uppercase;
+	word-wrap: break-word;
+	white-space: normal;
+	cursor: pointer;
+	-webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+	-webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+	transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
+	padding: .84rem 2.14rem;
+	font-size: .90rem
+
 
 }
 .btn-custom:hover,
 .btn-custom:focus,
 .btn-custom:active {
     outline: 0;
+	transition: all .3s;
+	border:3px solid #000051;
     background-color: #000051 !important;
     color: White;
     -webkit-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
-    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15)
+    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+
 }
 .table{
   background-color: white !important;
@@ -67,13 +85,17 @@ body{
 }
 h2{
   color: #000051 !important;
-    text-shadow: 1px 1px white;
-}
-#warningInfo
-{
-  color:red;
-  font-size: 18px !important;
+  text-shadow:1px 2px white;
 
+}
+.warningInfo{
+  color:red !important;
+  font-size: 18px !important;
+}
+
+.successInfo{
+  color:green!important;
+  font-size: 18px !important;
 }
 .navbar-brand:hover,
 .navbar-brand:focus,
@@ -82,15 +104,19 @@ h2{
   font-size: 26px;
 }
 @media(max-width: 768px) {
+  .view-custom{
+    background-image: url('picture/left.jpg');
+    background-repeat: no-repeat; background-size: cover; background-position: center center;
+    height:100%;
+  }
+  .view-custom-intro{
+    background-image: url('https://images.pexels.com/photos/733852/pexels-photo-733852.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
+    background-repeat: no-repeat; background-size: cover; background-position: center center;
+    height:120vh;
+    width: 100%;
+  }
   h2 {
     font-size: 1.8rem !important;
-  }
-  .btn-custom{
-    background-color: #420975 !important;
-    color:white;
-  }
-  .btn-secondary{
-    background-color: #000051 !important;
   }
   .jumbotron
   {
@@ -99,4 +125,51 @@ h2{
     margin-left: auto;
     margin-right: auto;
   }
+}
+button {
+  position: relative;
+  height: 45px;
+  width: 50%;
+  margin: 10px 7px;
+  padding: 5px 5px;
+  font-weight: 700;
+  font-size: 15px;
+  letter-spacing: 2px;
+  color: #000051;
+  border: 2px #000051 solid;
+  border-radius: 6px;
+  text-transform: uppercase;
+  outline: 0;
+  overflow:hidden;
+  background: none;
+  z-index: 1;
+  cursor: pointer;
+  transition:         0.10s ease-in;
+  -o-transition:      0.10s ease-in;
+  -ms-transition:     0.10s ease-in;
+  -moz-transition:    0.10s ease-in;
+  -webkit-transition: 0.10s ease-in;
+}
+
+.fill:hover {
+  color: whitesmoke;
+}
+
+.fill:before {
+  content: "";
+  position: absolute;
+  background: #000051;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 100%;
+  z-index: -1;
+  -webkit-transition: top 0.12s ease-in;
+}
+
+.fill:hover:before {
+  top: 0;
+}
+.text-primary{
+	color: #000051 !important;
 }
